--- a/Store/Pages/login.html
+++ b/Store/Pages/login.html
@@ -12,11 +12,11 @@
                 </label>
                 <input type="password" id="password" class="border rounded ml-2 p-1 shadow-inner border-blue-300 w-full">
             </fieldset>
-            <button type="submit" id="full-name" class="rounded bg-blue-600 w-3/4 text-white">Login</button>
+            <button type="submit" id="submit" class="rounded bg-blue-600 w-3/4 text-white">Login</button>
         </form>
         <div class="no-acc w-72 border-2 mt-10 p-4 rounded flex justify-center space-x-2">
             <span>New to Store?</span>
-            <span class="underline text-blue-500">Create account</span>
+            <span id="sign-up" class="underline text-blue-500">Create account</span>
         </div>
     </div>
     <div class="sign-up mt-10 w-72 m-auto hidden">
@@ -27,8 +27,8 @@
             </fieldset>
             <fieldset class="flex flex-col w-full items-center space-y-4">
                 <div class="flex flex-col w-5/6">
-                    <label for="password">Create a password</label>
-                    <input type="password" id="password" class="border border-green-600">
+                    <label for="create-password">Create a password</label>
+                    <input type="password" id="create-password" class="border border-green-600">
                 </div>
                 <div class="flex flex-col w-5/6">
                     <label for="c-password">Confirm a password</label>
@@ -39,7 +39,7 @@
                 <label for="name">Enter user-name</label>
                 <input type="text" id="name" class="border border-green-600">
             </fieldset>
-            <button type="submit" class="border-2 border-green-600 rounded w-full">Create Account</button>
+            <button type="submit" id="signup" class="border-2 border-green-600 rounded w-full">Create Account</button>
         </form>
     </div>
 </div>
