--- a/Store/Pages/favorites.html
+++ b/Store/Pages/favorites.html
@@ -1,3 +1,23 @@
 <div class="fav-screen">
     <span>You have no favorite items yet</span>
+    <article class="favorite-item flex space-x-2 rounded-lg shadow-[0_0_0.3rem_gray] m-2">
+        <div class="image h-24 w-24 p-1 overflow-hidden rounded-lg">
+            <img src="../Assets/oleg-ivanov-sg_gRhbYXhc-unsplash.jpg" alt="" class="object-fill h-full w-full">
+        </div>
+        <div class="info">
+            <div class="desc">
+                <span class="font-semibold">Name</span>
+                <div class="flex justify-evenly w-full text-lg">
+                    <span>Price</span>
+                    <span class="font-semibold">%off</span>
+                    <span class="font-semibold">C-price</span>
+                </div>
+            </div>
+            <div class="actions flex items-center space-x-4 mt-2">
+                <button class="text-white bg-blue-700 rounded-md p-1">Buy Now</button>
+                <span class="text-2xl"><ion-icon name="cart"></ion-icon></span>
+                <span class="text-2xl"><ion-icon name="trash"></ion-icon></span>
+            </div>
+        </div>
+    </article>
 </div>
