--- a/Store/Pages/notifications.html
+++ b/Store/Pages/notifications.html
@@ -1,3 +1,26 @@
 <div class="noti-screen">
-    <span>You have no notifications yet</span>
+    <span class="text-red-700 font-[caveat] text-xl ml-2 font-bold">You have no notifications!</span>
+    <div class="">
+        <section>
+            <div class="flex justify-between my-2 mx-1 font-semibold text-blue-700">
+                <span id="clear-all" class="">Clear All</span>
+                <span id="read-all" class="">Mark all as read</span>
+            </div>
+            <hr>
+        </section>
+        <section class="notifications h-96 overflow-auto">
+            <article class="notification flex space-x-2 m-2">
+                <div class="noti-image h-16 w-16">
+                    <img src="../Assets/blank-profile.webp" alt="">
+                </div>
+                <div class="noti-content">
+                    <span class="title text-lg font-bold">Lorem ipsum dolor sit amet consectetur.</span>
+                    <div class="noti-body">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, labore!
+                    </div>
+                </div>
+            </article>
+            <hr>
+        </section>
+    <div>
 </div>
