--- a/Store/Pages/favorites.html
+++ b/Store/Pages/favorites.html
@@ -1,16 +1,16 @@
 <div class="fav-screen">
-    <span>You have no favorite items yet</span>
+    <span class="text-red-700 font-[caveat] text-xl ml-2 font-bold">You have no favorite items!</span>
     <article class="favorite-item flex space-x-2 rounded-lg shadow-[0_0_0.3rem_gray] m-2">
-        <div class="image h-24 w-24 p-1 overflow-hidden rounded-lg">
+        <div class="image h-24 w-24 p-1">
             <img src="../Assets/oleg-ivanov-sg_gRhbYXhc-unsplash.jpg" alt="" class="object-fill h-full w-full">
         </div>
         <div class="info">
             <div class="desc">
                 <span class="font-semibold">Name</span>
-                <div class="flex justify-evenly w-full text-lg">
-                    <span>Price</span>
-                    <span class="font-semibold">%off</span>
-                    <span class="font-semibold">C-price</span>
+                <div class="flex w-full text-lg font-semibold space-x-4">
+                    <span class="line-through"><strike>Price</strike></span>
+                    <span class="">C-price</span>
+                    <span class="">%off</span>
                 </div>
             </div>
             <div class="actions flex items-center space-x-4 mt-2">
