--- a/Store/index.html
+++ b/Store/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FASHION</title>
+    <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-full">
@@ -61,9 +62,9 @@
                 </span>
             </div>
         </header>
-        <nav class="h-full fixed right-0 top-0 left-0 bottom-0 z-10 hidden opacity-80">
-            <div class="menu-overlay fixed right-0 top-0 left-0 bottom-0 bg-gray-500 opacity-80"></div>
-            <div class="h-full relative z-2 bg-black text-white text-2xl w-1/2 p-1">
+        <nav class="h-full fixed right-0 top-0 left-0 bottom-0 z-10 hidden bg-opacity-80">
+            <div class="menu-overlay fixed right-0 top-0 left-0 bottom-0 bg-gray-500 opacity-70"></div>
+            <div class="h-full relative z-2 bg-black text-white text-2xl w-1/2 p-1 bg-opacity-80">
                 <section id="profile" class="flex space-x-2 text-lg items-center">
                     <div class="profile-photo h-16 w-16 rounded-full overflow-hidden">
                         <img src="./Assets/blank-profile.webp" alt="profile-photo" class="object-fill h-full w-full">
@@ -74,6 +75,10 @@
                     </div>
                 </section>
                 <section class="menu-items">
+                    <div id="orders" class="flex items-center my-2 p-1">
+                        <span><ion-icon name="cube"></ion-icon></span>
+                        <span class="ml-2">My Orders</span>
+                    </div>
                     <div id="reviews" class="flex items-center my-2 p-1">
                         <span><ion-icon name="paper"></ion-icon></span>
                         <span class="ml-2">Reviews</span>
@@ -82,13 +87,13 @@
                         <span><ion-icon name="call"></ion-icon></span>
                         <span class="ml-2">Contacts</span>
                     </div>
-                    <div id="settings" class="flex items-center my-2 p-1">
-                        <span><ion-icon name="settings"></ion-icon></span>
-                        <span class="ml-2">Settings</span>
-                    </div>
                     <div id="about" class="flex items-center my-2 p-1">
                         <span><ion-icon name="ribbon"></ion-icon></span>
                         <span class="ml-2">About</span>
+                    </div>
+                    <div id="settings" class="flex items-center my-2 p-1">
+                        <span><ion-icon name="settings"></ion-icon></span>
+                        <span class="ml-2">Settings</span>
                     </div>
                 </section>
                 <section class="ad-space">
